##Text encoding: utf-8

2010-05-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/Makefile.am: fixed build with LDFLAGS="-Wl,--no-undefined".
	[#29966]
	* libs/gcp/Makefile.am: ditto. (patch from Funda Wang)
	* libs/gcu/Makefile.am: ditto. (patch from Funda Wang)
	* plugins/loaders/cdx/Makefile.am: ditto.
	* plugins/loaders/cdxml/Makefile.am: ditto.
	* plugins/loaders/cif/Makefile.am: ditto.
	* plugins/loaders/cml/Makefile.am: ditto.
	* plugins/paint/arrows/Makefile.am: ditto.
	* plugins/paint/atoms/Makefile.am: ditto.
	* plugins/paint/bonds/Makefile.am: ditto.
	* plugins/paint/cycles/Makefile.am: ditto.
	* plugins/paint/residues/Makefile.am: ditto.
	* plugins/paint/selection/Makefile.am: ditto.
	* plugins/paint/templates/Makefile.am: ditto.
	* plugins/paint/text/Makefile.am: ditto.
	* plugins/paint/wikipedia/Makefile.am: ditto.

2010-05-13  Daniel Leidert  <daniel.leidert@wgdd.de>
	* libs/gcu/gcucrystalviewer.cc: Fixed typo.

2010-05-13  Daniel Leidert  <daniel.leidert@wgdd.de>
	* plugins/paint/*/Makefile.am: Fixed uidir - 's#.ui#/ui#g'.

2010-05-13  Daniel Leidert  <daniel.leidert@wgdd.de>
	* programs/crystal/gcrystal.desktop.in.in (MimeType): Fixed field -
	must end with a semicolon.
	* programs/3d/gchem3d.desktop.in.in (MimeType): Ditto.
	* programs/paint/gchempaint.desktop.in.in (MimeType): Ditto. Removed
	duplicated entry.

2010-05-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.12.1).

2010-05-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: set version to 0.12.0.
	* libs/gcp/fragment.cc: fix loading old fragment nodes.
	* plugins/paint/text/fragmenttool.cc: add more shortcuts.
	* plugins/paint/text/texttool.cc: ditto.

2010-05-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: fix loading of new fragment nodes.
	* libs/gcp/document.h: ditto.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/theme.cc: do not delete a theme twice.
	* libs/gcp/theme.h: ditto.